[GPU Process] [iOS] Vertical text is incorrectly displaced https://bugs.webkit.org/show_bug.cgi?id=232917 rdar://85483031

Reviewed by Myles C. Maxfield.

Source/WebCore:

DrawGlyphsRecorder calls FontCascade::drawGlyphs() which calls CoreText
to draw the vertical text to its internal context. This internal context
is setup to be called back for every single run. When CoreText calls
DrawGlyphsRecorder::recordDrawGlyphs(), it records drawing the glyph runs
into the owner recorder. The problem is CoreText passes the transformed
positions to recordDrawGlyphs(). To call drawGlyphsAndCacheFont() in the
recorder we have to pass the un-transformed anchor point. To get this anchor
point, we have to apply the inverse of fillVectorWithVerticalGlyphPositions()
to the first transformed position.

* platform/graphics/GraphicsContext.h:
* platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:
(WebCore::DrawGlyphsRecorder::recordDrawGlyphs):

LayoutTests:

Unskip failed vertical text layout tests.

* platform/ios-wk2/TestExpectations:



Canonical link: https://commits.webkit.org/249101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292198 268f45cc-cd09-0410-ab3c-d52691b4dbfc